# Zekon-Music-Skore

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
FM_Score/: build.gradle  consumer-rules.pro
FM_Score/src/main/: AndroidManifest.xml
FM_Score/src/main/cpp/: CMakeLists.txt  tsf.h  tsf_jni.c
FM_Score/src/main/java/ro/florinm/FM_Score/: FM_Accidental.java  FM_Align.java  FM_AudioTrack.java  FM_Audio_Measure.java  FM_Audio_Note.java  FM_Audio_Song.java  FM_BarNote.java  FM_BaseKey.java  FM_BaseNote.java  FM_Beam.java  FM_BoundingBoxType.java  FM_Chord.java  FM_Clef.java  FM_ClefValue.java  FM_Const.java  FM_DurationValue.java  FM_Helper.java  FM_Key.java  FM_KeySignature.java  FM_KeySignatureValue.java  FM_NotationSystem.java  FM_Note.java  FM_NoteType.java  FM_NoteValue.java  FM_Pause.java  FM_Score.java  FM_ScoreBase.java  FM_ScorePlayer.java  FM_StaveCount.java  FM_Tie.java  FM_TimeSignature.java  FM_TimeSignatureValue.java  FM_Tuple.java  FM_Tuplet.java
FM_Score/src/main/java/tech/zekon/FM_Score/: FM_Accidental.java  FM_Align.java  FM_AudioTrack.java  FM_Audio_Measure.java  FM_Audio_Note.java  FM_Audio_Song.java  FM_Beam.java  (+28 more)
FM_ScorePlayer/: build.gradle
FM_ScorePlayer/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: furelise.json  test.json
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
